# data-stm32

./: .gitignore  CHANGELOG.md  ChangeLog.md  LICENSE  README.md  cabal.project  data-stm32.cabal  data-stm32.nix  default.nix  justdoit  package.yaml  shell.nix  stack.yaml  watch
app/genstm/: Coerce.hs  Contexts.hs  Extract.hs  Main.hs  MakeDMAUART.hs  MakePeriph.hs  Template.hs  Types.hs  Utils.hs
app/gensvd/: Main.hs
app/mxmcu/: Main.hs
app/referencepdf/: Main.hs
app/svd/: Main.hs
app/updaterepo/: Main.hs
data/: LICENSE  default.nix  devices.data  shell.nix  watch
data/nix/: data-stm32.nix  generated.nix  hastache.nix  ivory-tower-base.nix  ivory-tower-drivers.nix  ivory-tower-helloworld.nix  ivory-tower-stm32.nix  ivory.nix  tower.nix
nix/: cubemx-core-resource.nix  cubemx-database.nix  default.nix  hastache.nix  itn.nix  modm-devices-izpack.nix  shell.nix  stm32-rs-svds.nix  svd-database.nix
nix/cmx/: cmx.nix  update-cmx.py
src/Data/: CMX.hs  Ivory.hs  STM32.hs  SVD.hs
src/Data/Bits/: Pretty.hs
src/Data/CMX/: Extract.hs  Parse.hs  Pretty.hs  Types.hs
src/Data/CMX/Parse/: Families.hs  MCU.hs  Util.hs
src/Data/Ivory/: ISR.hs  MCU.hs  MemMap.hs  Periph.hs  Pretty.hs  Reg.hs
src/Data/STM32/: Clock.hs  Core.hs  Drivers.hs  Family.hs  Memory.hs  Name.hs  Periph.hs  Types.hs  Util.hs
src/Data/SVD/: Extract.hs  Parse.hs  Pretty.hs  Types.hs
svds/stm/: STM32G07x.svd  STM32G081.svd  STM32H750x.svd
templates/: README.md  STM32DEV.hs  ivory-bsp-stm32.cabal  ivory-bsp-stm32.cabal_template
templates/ARMv7M/: Exception.hs  Instr.hs  MemoryMap.hs  SysTick.hs
templates/ARMv7M/SystemControl/: Register.hs
templates/STM32/: AF.hs  ClockConfig.hs  ClockInit.hs  Core.hs  Family.hs  Interrupt.hs  LinkerScript.hs  MCU.hs  MemoryMap.hs  VectorTable.hs
templates/STM32/ClockConfig/: Init.hs
templates/STM32/Driver/: CAN.hs  ETH.hs  EXTI.hs  EXTIv1.hs  EXTIv2.hs  I2C.hs  I2Cv1.hs  I2Cv2.hs  IWDG.hs  RNG.hs  SPI.hs  SPIv1.hs  SPIv2.hs  SPIv3.hs  UART.hs  UARTv1.hs  UARTv2.hs  UARTv3.hs  X.hs
templates/STM32/Driver/ETH/: FrameBuffer.hs  MIIMTypes.hs  PhyState.hs  RxPacket.hs
templates/STM32/Driver/I2C/: I2CDriverState.hs
templates/STM32/Driver/UART/: DMA.hs
templates/STM32/Modes/: AF.hs
templates/STM32/Peripheral/: ADC.hs  ATIM.hs  DMA.hs  ETH.hs  EXTI.hs  GPIO.hs  GTIM.hs  I2C.hs  IWDG.hs  LPUART.hs  RTC.hs  SPI.hs  UART.hs  X.hs
templates/STM32/Peripheral/ADC/: CommonRegs.hs  Peripheral.hs  RegTypes.hs
templates/STM32/Peripheral/AFIO/: Peripheral.hs
templates/STM32/Peripheral/ATIM/: Peripheral.hs  RegTypes.hs  Regs.hs
templates/STM32/Peripheral/CAN/: Filter.hs  Peripheral.hs  RegTypes.hs
templates/STM32/Peripheral/DMA/: Artifacts.hs  Peripheral.hs  Regs.hs
templates/STM32/Peripheral/ETH/: Descriptor.hs  Peripheral.hs  Phy.hs  Pins.hs
templates/STM32/Peripheral/EXTI/: RegTypes.hs  Types.hs
templates/STM32/Peripheral/EXTIv1/: Peripheral.hs
templates/STM32/Peripheral/EXTIv2/: Peripheral.hs
templates/STM32/Peripheral/GPIO/: Peripheral.hs
templates/STM32/Peripheral/GPIO1/: Peripheral.hs  RegTypes.hs  TH.hs
templates/STM32DEV/: ADC.hs  AF.hs  AFIO.hs  ATIM.hs  CAN.hs  Clock.hs  DMA.hs  ETH.hs  EXTI.hs  EXTIF1.hs  EXTIG0.hs  FLASH.hs  GPIO.hs  GTIM.hs  I2C.hs  IWDG.hs  Interrupt.hs  MemoryMap.hs  PWR.hs  RCC.hs  RNG.hs  RTC.hs  SPI.hs  SYSCFG.hs  UART.hs  USART.hs
templates/STM32DEV/GPIO/: Pins.hs  Ports.hs
templates/STM32DEV/UART/: DMA.hs
templates/STM32FAM/F0/: ClockInit.hs
templates/STM32FAM/F1/: ClockInit.hs
templates/STM32FAM/F3/: ClockInit.hs
templates/STM32FAM/F4/: ClockInit.hs
templates/STM32FAM/F7/: ClockInit.hs
templates/STM32FAM/G0/: ClockInit.hs
templates/STM32FAM/G4/: ClockInit.hs
templates/STM32FAM/L4/: ClockInit.hs
templates/STM32FAM/L4Plus/: ClockInit.hs
templates/STM32XX/: ClockInit.hs  Interrupt.hs  MemoryMap.hs
templates/support/: instr.h  linker_script.lds.template
test/: RamSpec.hs  Spec.hs  SpecHelper.hs
(+49 files in other folders)
