name:           data-stm32
version:        0.1.0.0
synopsis:       ARM SVD and CubeMX XML parser and pretty printer for STM32 family
description:    ARM SVD and CubeMX XML parser and pretty printer for STM32 family
category:       Embedded
homepage:       https://github.com/sorki/data-stm32#readme
bug-reports:    https://github.com/sorki/data-stm32/issues
author:         Richard Marko
maintainer:     srk@48.io
copyright:      2020 Richard Marko
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md

library
  exposed-modules:
      Data.CMX
      Data.CMX.Extract
      Data.CMX.Parse
      Data.CMX.Parse.MCU
      Data.CMX.Parse.Families
      Data.CMX.Parse.Util
      Data.CMX.Pretty
      Data.CMX.Types
      Data.Ivory
      Data.Ivory.ISR
      Data.Ivory.MCU
      Data.Ivory.Periph
      Data.Ivory.Pretty
      Data.STM32
      Data.STM32.Clock
      Data.STM32.Core
      Data.STM32.Drivers
      Data.STM32.Family
      Data.STM32.Name
      Data.STM32.Memory
      Data.STM32.Periph
      Data.STM32.Types
      Data.STM32.Util
      Data.SVD.Extract
  hs-source-dirs:
      src
  build-depends:
      ansi-wl-pprint
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , cereal
    , data-default-class
    , data-svd
    -- (not-so) temporary
    , ghcid
    , Diff
    , containers
    , foldl
    , hxt
    , pretty-simple
    , regex-posix
    , safe
    , split
    , text
    , time
    , turtle
    , vector
  default-language: Haskell2010

executable genstm
  main-is: Main.hs
  other-modules:
      Coerce
      Contexts
      Extract
      MakePeriph
      Utils
      Types
      Template
      Paths_data_stm32
  hs-source-dirs:
      app/genstm
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ansi-wl-pprint
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , cereal
    , containers
    , data-default-class
    , data-stm32
    , data-svd
    , Diff
    , foldl
    , mustache
    , safe
    , syb
    , mtl
    , unordered-containers
    , optparse-applicative
    , pretty-simple
    , regex-posix
    , split
    , text
    , time
    , turtle
    , vector
  default-language: Haskell2010

executable gensvd
  main-is: Main.hs
  hs-source-dirs:
      app/gensvd
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ansi-wl-pprint
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , containers
    , data-stm32
    , data-svd
    , foldl
    , text
    , time
    , turtle
  default-language: Haskell2010

executable mxmcu
  main-is: Main.hs
  other-modules:
      Paths_data_stm32
  hs-source-dirs:
      app/mxmcu
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ansi-wl-pprint
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , cereal
    , containers
    , data-stm32
    , data-svd
    , foldl
    , pretty-simple
    , regex-posix
    , split
    , text
    , time
    , turtle
    , vector
  default-language: Haskell2010

executable updaterepo
  main-is: Main.hs
  hs-source-dirs:
      app/updaterepo
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      ansi-wl-pprint
    , attoparsec
    , base >=4.7 && <5
    , bytestring
    , containers
    , data-stm32
    , foldl
    , text
    , time
    , turtle
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      RamSpec
      Paths_data_stm32
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , ansi-wl-pprint
    , bytestring
    , hspec
    , system-filepath
    , data-stm32
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/sorki/data-stm32
